--- a/src/engine/ruleset/integrations/windows/decoders/windows-event.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-event.yml
@@ -5,7 +5,7 @@ metadata:
   title: Base decoder for Windows events.
   description: This Windows decoder normalizes common fields from Windows events.
   versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
-  compatibility: This decoder has been tested on Wazuh version 4.3.
+  compatibility: This decoder was tested on Windows Server 2019 and Windows 10, but should work on all versions of Windows Vista onwards.
   author:
     name: Wazuh, Inc.
     date: 2023/01/23
@@ -28,13 +28,15 @@ normalize:
 
       - host.name: $windows.System.Computer.#text
 
+      - message: kvdb_get(windows_id_to_message, $event.id)
+
       - _win_log_level:
-          "0": "Audit"
-          "1": "Critical"
-          "2": "Error"
-          "3": "Warning"
-          "4": "Information"
-          "5": "Verbose"
+          '0': Audit
+          '1': Critical
+          '2': Error
+          '3': Warning
+          '4': Information
+          '5': Verbose
       - log.level: get_value($_win_log_level, $windows.System.Level.#text)
 
       - wazuh.decoders: array_append(windows-event)
