--- a/.github/workflows/windows-file-details.yml
+++ b/.github/workflows/windows-file-details.yml
@@ -1,4 +1,4 @@
-name: Testing the details of the executables and libraries
+name: Windows binaries' details
 
 on:
   pull_request:
@@ -24,10 +24,7 @@ jobs:
           find src/win32/ -regex '.*wazuh-agent-[0-9]+.[0-9]+.[0-9]+\.exe$' -delete
           # We remove the executables that aren't distributed in the signed installer
           rm -f src/win32/setup-*.exe
-          # We remove the libraries that isn't compiled by Wazuh
-          rm -r src/win32/libwinpthread-1.dll
           cp src/win32/*.exe src/bin_files/
-          cp src/win32/*.dll src/bin_files/
           cp src/*.dll src/bin_files/
       - name: Upload Artifact binaries
         uses: actions/upload-artifact@v3
