Added engine-diff tool to compare events

--- a/src/engine/tools/engine-suite/setup.cfg
+++ b/src/engine/tools/engine-suite/setup.cfg
@@ -31,6 +31,7 @@ console_scripts =
     engine-decoder = engine_decoder.__main__:main
     engine-integration = engine_integration.__main__:main
     engine-clear = engine_clear.__main__:main
+    engine-diff = engine_diff.__main__:main
 
 [options.extras_require]
 dev =
