--- a/src/engine/tools/vagrant/Vagrantfile
+++ b/src/engine/tools/vagrant/Vagrantfile
@@ -41,6 +41,11 @@ Vagrant.configure("2") do |config|
         apt-get update
         apt-get install build-essential dkms linux-headers-$(uname -r) gcc g++ make libc6-dev automake autoconf gnupg apt-transport-https libtool libssl-dev jq yq tig linux-tools-common linux-tools-generic linux-tools-`uname -r` bpfcc-tools sysstat python3-pip -y
 
+        #Delta installation, required for engine-diff
+        wget https://github.com/dandavison/delta/releases/download/0.16.5/git-delta-musl_0.16.5_amd64.deb
+        dpkg -i git-delta-musl_0.16.5_amd64.deb
+        rm git-delta-musl_0.16.5_amd64.deb
+        
         #CMake 3.24 installation from its release page
         curl -sL https://github.com/Kitware/CMake/releases/download/v3.24.2/cmake-3.24.2-linux-x86_64.tar.gz | tar -xz -C /usr/local --strip-components=1
         export PATH=$PATH:/usr/local/bin
