Add SAX Json array parser

--- a/src/shared_modules/utils/tests/CMakeLists.txt
+++ b/src/shared_modules/utils/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ file(GLOB UTIL_CXX_UNITTEST_LINUX_SRC
     "rocksDBWrapper_test.cpp"
     "threadEventDispatcher_test.cpp"
     "xzHelper_test.cpp"
+    "jsonArrayParser_test.cpp"
 )
 
 file(COPY input_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
