Made event.original sercheable and removed fields deletion processor

--- a/src/engine/extension/filebeat/7.x/filebeat.yml
+++ b/src/engine/extension/filebeat/7.x/filebeat.yml
@@ -65,7 +65,7 @@ processors:
       fields: ["log.offset", "log.file"]
         
   - drop_fields:
-      fields: ["agent.ephemeral_id", "agent.hostname", "agent.version", "input", "fields"]
+      fields: ["agent.ephemeral_id", "agent.hostname", "agent.version", "input"]
   - drop_fields:
       when:
         not:
