--- a/src/engine/tools/vagrant/Vagrantfile
+++ b/src/engine/tools/vagrant/Vagrantfile
@@ -64,6 +64,9 @@ Vagrant.configure("2") do |config|
         # Install engine-schema python script
         pip3 install --system $ENGINE_SRC_DIR/tools/engine-suite
 
+        # Install api-communication python script
+        pip3 install --system $ENGINE_SRC_DIR/test/integration_tests/api-communication
+
         # Add autocompletion to profile
         echo "source $ENGINE_SRC_DIR/tools/vagrant/autocompletion.sh" >> /etc/profile
 
